--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel	="stylesheet" href="style.css">
 </head>
 <body>
-<img id="product-img-mobile" src="images/image-product-mobile.jpg">
-<img id="product-img" src="images/image-product-desktop.jpg">
+<img id="product-img-mobile" src="images/image-product-mobile.jpg" alt="prdocut">
+<img id="product-img" src="images/image-product-desktop.jpg" alt="product">
 <div id="content">
   <p id="product">Perfume</p>
 
@@ -27,7 +27,7 @@
   <span id="price">$149.99</span>
   <span id="original-price">$169.99</span></br>
 
-  <button><img id="cart-icon" src="images/icon-cart.svg">Add to Cart</button>
+  <button><img id="cart-icon" src="images/icon-cart.svg" alt="cart-icon">Add to Cart</button>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
