--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel	="stylesheet" href="style.css">
 </head>
 <body>
-<img id="product-img-mobile" src="images/image-product-mobile.jpg" alt="prdocut">
-<img id="product-img" src="images/image-product-desktop.jpg" alt="product">
+<img id="product-img-mobile" src="images/image-product-mobile.jpg" alt="prdocut-mobile">
+<img id="product-img" src="images/image-product-desktop.jpg" alt="product-desktop">
 <div id="content">
   <p id="product">Perfume</p>
 
