--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
   <button><img id="cart-icon" src="images/icon-cart.svg" alt="cart-icon">Add to Cart</button>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/Marat2000" target="_blank">Marat Azoyan</a>.
-  </div>
+  </footer>
   
  
   
