--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <img id="product-img-mobile" src="images/image-product-mobile.jpg" alt="prdocut-mobile">
 <img id="product-img" src="images/image-product-desktop.jpg" alt="product-desktop">
-<div id="content">
+<main>
   <p id="product">Perfume</p>
 
   <h1>Gabrielle Essence Eau De Parfum</h1>
@@ -23,7 +23,7 @@
   
   <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
   Perfumer-Creator for the House of CHANEL.</p>
-</div>
+</main>
   <span id="price">$149.99</span>
   <span id="original-price">$169.99</span></br>
 
